<resources>
    <string name="app_name">机锋市场</string>
    <string name="app_name_en">aMarket2.0</string>
    <string name="notification_server_error">服务器暂时无法访问，请稍候重试。</string>
    <string name="notification_client_error">客户端访问错误，请检查设置。</string>
    <string name="notification_update_info_title">软件更新提示</string>
    <string name="notification_update_info">%1$d款软件可更新，点击查看</string>
    <string name="notification_first_login">您只安装了%1$d款装机必备软件，点击查看</string>
    <string name="notification_recommend_info_title">机锋推荐: %1$s</string>
    <string name="tab_product">市场应用</string>
    <string name="tab_bbs">论坛附件</string>
    <string name="tab_product_result">市场应用</string>
    <string name="tab_bbs_result">论坛附件</string>
    <string name="hint_search">搜索机锋市场软件及论坛附件</string>
    <string name="search_no_result">没有搜索到内容</string>
    <string name="warning_no_input">请输入搜索关键词</string>
    <string name="start_download_bbs_apk">马上开始下载附件</string>
    <string name="result_nums">共有%1$s个搜索结果</string>
    <string name="register">注册</string>
    <string name="register_ok">注册成功</string>
    <string name="registering">注册中，请稍候</string>
    <string name="register_label">提交</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_email">邮箱</string>
    <string name="error_username_empty">用户名不能为空</string>
    <string name="error_username_length_invalid">用户名长度必须是3到15字符之间（一个汉字等于3个字符）</string>
    <string name="error_email_empty">邮箱不能为空</string>
    <string name="error_email_format_invalid">邮箱格式不正确</string>
    <string name="error_email_length_invalid">邮箱长度必须是6到32个字符之间</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_password_length_invalid">密码长度必须小于17个字符</string>
    <string name="error_password_not_same">密码不匹配</string>
    <string name="error_username_invalid">用户名不合法，请重新输入</string>
    <string name="error_username_exist">用户名已经被注册，请尝试其他的用户名。</string>
    <string name="error_email_invalid">您输入的邮箱格式不正确。</string>
    <string name="error_email_exist">邮箱已经被注册，请尝试其他的邮箱。</string>
    <string name="error_password_invalid">密码不合法。</string>
    <string name="error_other">注册失败，未知原因。</string>
    <string name="register_tip">"还没有机锋账号？
立即创建"</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="singin">登录中，请稍候</string>
    <string name="login_tip">"已经拥有机锋账号？
立即登录"</string>
    <string name="hint_input_username">机锋帐号</string>
    <string name="hint_input_password">密码</string>
    <string name="error_login_username">用户名不存在，请重新输入。</string>
    <string name="error_login_password">密码不正确，请重新输入。</string>
    <string name="error_login_other">登录失败，请稍候重试。</string>
    <string name="warning_no_download">没有选择任何一款应用</string>
    <string name="main_tab_index">首页</string>
    <string name="main_tab_sort">分类</string>
    <string name="main_tab_rank">排行</string>
    <string name="main_tab_promotion">达人</string>
    <string name="main_tab_app">管理</string>
    <string name="rank_top_title">应用排行</string>
    <string name="rank_tab_game">游戏</string>
    <string name="rank_tab_app">应用</string>
    <string name="rank_tab_book">电子书</string>
    <string name="rank_tab_fast">风向标</string>
    <string name="download_unknown_title">&lt;未命名></string>
    <string name="notification_filename_separator">", "</string>
    <string name="notification_filename_extras">" 还有%1$d项"</string>
    <string name="notification_paused_by_app">被暂停</string>
    <string name="notification_download_complete">下载完成</string>
    <string name="sort_top_title">应用分类</string>
    <string name="sort_tab_pop">最热</string>
    <string name="sort_tab_new">最新</string>
    <string name="category_title_genius">精选专题</string>
    <string name="sort_install_nessary_title">装机必备</string>
    <string name="sort_install_nessary_exit">关闭</string>
    <string name="sort_install_nessary_down">下载所选</string>
    <string name="sort_install_installed">已安装</string>
    <string name="person_account_title">个人中心</string>
    <string name="account_logined">已登录，点击注销</string>
    <string name="account_logo_title">登录机锋帐号</string>
    <string name="account_clound_title">云推送</string>
    <string name="account_logo_desc">登录后可开启以下功能与服务</string>
    <string name="account_clound_desc">从机锋市场推送APK到手机</string>
    <string name="account_payment_desc">便利地充值和购买付费内容</string>
    <string name="account_payment_balance">余额 : %1$s券 , 点击充值</string>
    <string name="account_payment_over">已完成交易</string>
    <string name="account_payed_count">%1$d笔</string>
    <string name="account_payed">购买</string>
    <string name="account_payment_title">充值</string>
    <string name="account_payed_history">购买记录</string>
    <string name="account_no_pay_log">没有购买记录</string>
    <string name="account_logout">注销</string>
    <string name="account_recharge">充值</string>
    <string name="account_start">开启</string>
    <string name="account_starting">开启中</string>
    <string name="account_close">关闭</string>
    <string name="sure_to_regist">确定要注销吗?</string>
    <string name="sure_to_bind">云推送服务将使用更多流量，建议WIFI环境下开启</string>
    <string name="account_bind_error">云推送绑定失败，请稍后再试</string>
    <string name="account_remind">提醒</string>
    <string name="account_binding">云推送绑定中</string>
    <string name="account_bind_success">云推送绑定成功</string>
    <string name="menu_account">个人中心</string>
    <string name="menu_setting">设置</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_more">关于</string>
    <string name="menu_bbs">社区</string>
    <string name="menu_exit">退出</string>
    <string name="menu_del_all">全部删除</string>
    <string name="tab_installed">已安装</string>
    <string name="tab_download">下载</string>
    <string name="download_status_downloading">下载中</string>
    <string name="download_status_downloaded">安装</string>
    <string name="download_status_installing">安装中</string>
    <string name="download_status_installed">打开</string>
    <string name="download_all_update">全部更新</string>
    <string name="install_fail_file_not_exist">安装文件已不存在</string>
    <string name="download_remain_bytes" formatted="false">剩余%1$s%2$s</string>
    <string name="download_start">下载马上开始</string>
    <string name="download_addstack">加入队列</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="attention">注意</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="info">消息</string>
    <string name="loading">加载中</string>
    <string name="download">下载</string>
    <string name="upgrade">升级</string>
    <string name="app_download">软件下载</string>
    <string name="get_push_msg">马上开始下载推送的应用</string>
    <string name="open_push">开启</string>
    <string name="alert_open_apk_error">对不起，无法打开此应用</string>
    <string name="alert_diff_signature">您升级的应用作者不一致，确定下载？</string>
    <string name="alert_diff_signature_install">由于作者不一致，需要先卸载旧版的应用（将会丢失此应用的数据），确定继续？</string>
    <string name="hint_rating_count">%d人评分</string>
    <string name="rating">评分</string>
    <string name="open_apk_error_no_launch">没有应用程序可执行此操作</string>
    <string name="check_network">正在检测网络</string>
    <string name="network_status">检测到您正在使用%1$s网络</string>
    <string name="network_wifi">WIFI</string>
    <string name="network_valid">3G</string>
    <string name="network_cmwap">CMWAP</string>
    <string name="network_invalid">无网络</string>
    <string name="network_no_permission">无网络访问权限</string>
    <string name="no_valid_network">对不起，请检查网络是否可用？</string>
    <string name="network_retry">重试</string>
    <string name="network_setting">设置</string>
    <string name="init_data">正在获取最新内容</string>
    <string name="label_not_found">对不起，没有找到这款应用。</string>
    <string name="warning_password_is_empty">密码不能为空</string>
    <string name="hint_purchase">此软件需要%d个机锋券，请输入密码确认收费。</string>
    <string name="hint_purchase_success">购买成功</string>
    <string name="hint_purchase_failed">购买失败</string>
    <string name="hint_purchase_password_error">支付密码错误</string>
    <string name="warning_no_balance">您的帐号中没有足够的机锋券，点击\"是\"进入充值中心，或者\"否\"取消</string>
    <string name="useragent_app_name">aMarket2.0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="alert_dialog_error">连接失败，请稍候重试</string>
    <string name="no_data">连接失败，请检查你的网络后重试</string>
    <string name="permissions">所需权限：</string>
    <string name="no_permissions">不需要任何权限</string>
    <string name="permissions_desc">此应用需要以下权限，请确认后下载</string>
    <string name="perms_hide"><b>隐藏</b></string>
    <string name="perms_show_all"><b>全部显示</b></string>
    <string name="default_permission_group">默认</string>
    <string name="permissions_format" formatted="false">%1$s, %2$s</string>
    <string name="label_more">更多</string>
    <string name="label_less">收起</string>
    <string name="label_send">发送</string>
    <string name="label_response">回复</string>
    <string name="label_hint_comment">参与讨论</string>
    <string name="label_size">大小：%1$s</string>
    <string name="label_version">版本：%1$s</string>
    <string name="label_downloaded">下载：%1$s</string>
    <string name="label_author">作者：%1$s</string>
    <string name="label_ranking_over">谢谢</string>
    <string name="label_comments">%1$d个评级</string>
    <string name="alert_post_ok">发表成功</string>
    <string name="done">完成</string>
    <string name="leble_google">Google</string>
    <string name="label_up_time">更新时间：%1$s</string>
    <string name="login_rating">您已经安装应用，登录后可评分。</string>
    <string name="label_download">下载</string>
    <string name="label_paid">购买(%1$d券)</string>
    <string name="label_pending_download">稍后下载</string>
    <string name="label_update">更新</string>
    <string name="label_open">打开</string>
    <string name="label_uninstall">卸载</string>
    <string name="label_install">安装</string>
    <string name="label_delete">删除</string>
    <string name="label_start_download">立即下载</string>
    <string name="label_start">开始下载</string>
    <string name="label_cancel">取消下载</string>
    <string name="label_start_short">开始</string>
    <string name="alipay_charge_content" formatted="false">"您好，%1$s，您有%2$d机锋券。
请您输入充值金额。"</string>
    <string name="alipay_charge_info">元</string>
    <string name="charge_hint_alipay">说明：1元等于10机锋券。</string>
    <string name="checkbox_default_charge_type">将此方式设为默认方式</string>
    <string name="pref_search_settings_title">清除搜索历史</string>
    <string name="pref_search_settings_summary">立即清除所有搜索历史</string>
    <string name="pref_search_settings_dialog">立即清除所有搜索历史?</string>
    <string name="pref_cache_settings">缓存及隐私设置</string>
    <string name="pref_cache_settings_manual">清除缓存</string>
    <string name="pref_cache_settings_manual_summary">立即清除所有缓存数据</string>
    <string name="pref_cache_settings_manual_dialog">立即清除所有缓存数据?</string>
    <string name="pref_market_settings">使用习惯</string>
    <string name="pref_market_app_update_notification">应用更新通知</string>
    <string name="pref_market_app_update_notification_summary">应用有新版本时，弹出通知栏提醒</string>
    <string name="pref_market_app_not_download_image">无图省流量模式</string>
    <string name="pref_market_app_not_download_image_summary">不显示图片以加速、节省流量</string>
    <string name="pref_market_push_app">机锋推荐</string>
    <string name="pref_market_push_app_summary">接收编辑团队的精品应用推送</string>
    <string name="pref_market_app_delete_after_installation">自动删除APK文件</string>
    <string name="pref_market_app_delete_after_installation_summary">安装后自动删除安装包，节省磁盘空间</string>
    <string name="pref_theme_settings">主题设置</string>
    <string name="pref_theme_dark">静夜心情</string>
    <string name="pref_theme_dark_summary">安静而稳定，能听到时间的滴答。</string>
    <string name="pref_theme_light">轻松的光</string>
    <string name="pref_theme_light_summary">愉快的浅色调，低调而独特。</string>
</resources>