<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.mappn.gfan.common.widget.GfanPreferenceCategory android:title="@string/pref_theme_settings">
        <com.mappn.gfan.common.widget.GfanCheckBoxPreference android:enabled="false" android:title="@string/pref_theme_dark" android:key="theme_dark" android:summary="@string/pref_theme_dark_summary" android:defaultValue="true" />
        <com.mappn.gfan.common.widget.GfanCheckBoxPreference android:title="@string/pref_theme_light" android:key="theme_light" android:summary="@string/pref_theme_light_summary" android:defaultValue="false" />
    </com.mappn.gfan.common.widget.GfanPreferenceCategory>
    <com.mappn.gfan.common.widget.GfanPreferenceCategory android:title="@string/pref_market_settings">
        <com.mappn.gfan.common.widget.GfanCheckBoxPreference android:title="@string/pref_market_app_update_notification" android:key="update_app_notification" android:summary="@string/pref_market_app_update_notification_summary" android:defaultValue="true" />
        <com.mappn.gfan.common.widget.GfanCheckBoxPreference android:title="@string/pref_market_push_app" android:key="pref.recommend.app" android:summary="@string/pref_market_push_app_summary" android:defaultValue="true" />
        <com.mappn.gfan.common.widget.GfanCheckBoxPreference android:title="@string/pref_market_app_not_download_image" android:key="not_download_image" android:summary="@string/pref_market_app_not_download_image_summary" android:defaultValue="false" />
        <com.mappn.gfan.common.widget.GfanCheckBoxPreference android:title="@string/pref_market_app_delete_after_installation" android:key="delete_after_installation" android:summary="@string/pref_market_app_delete_after_installation_summary" android:defaultValue="true" />
    </com.mappn.gfan.common.widget.GfanPreferenceCategory>
    <com.mappn.gfan.common.widget.GfanPreferenceCategory android:title="@string/pref_cache_settings">
        <com.mappn.gfan.common.widget.ClientDialogPreference android:persistent="false" android:title="@string/pref_cache_settings_manual" android:key="manual_clear_cache" android:summary="@string/pref_cache_settings_manual_summary" android:dialogMessage="@string/pref_cache_settings_manual_dialog" />
        <com.mappn.gfan.common.widget.ClientDialogPreference android:persistent="false" android:title="@string/pref_search_settings_title" android:key="manual_clear_search_history" android:summary="@string/pref_search_settings_summary" android:dialogMessage="@string/pref_search_settings_dialog" />
    </com.mappn.gfan.common.widget.GfanPreferenceCategory>
</PreferenceScreen>
