<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_login" android:id="@id/menu_account" android:title="@string/menu_account" android:alphabeticShortcut="a" />
    <item android:icon="@drawable/ic_menu_preferences" android:id="@id/menu_setting" android:title="@string/menu_setting" android:alphabeticShortcut="b" />
    <item android:icon="@drawable/ic_menu_bbs" android:id="@id/menu_bbs" android:title="@string/menu_bbs" android:alphabeticShortcut="c" />
    <item android:icon="@drawable/ic_menu_start_conversation" android:id="@id/menu_feedback" android:title="@string/menu_feedback" android:alphabeticShortcut="d" />
    <item android:icon="@drawable/ic_menu_about" android:id="@id/menu_more" android:title="@string/menu_more" android:alphabeticShortcut="e" />
    <item android:icon="@drawable/ic_menu_close_clear_cancel" android:id="@id/menu_exit" android:title="@string/menu_exit" android:alphabeticShortcut="f" />
</menu>
