<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/list_item_bg_selector" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/top_bar" />
    <ScrollView android:scrollbarThumbVertical="@drawable/scrollbar" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/top_bar"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <EditText android:id="@id/et_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="13.0dip" android:hint="@string/hint_username" android:singleLine="true" android:maxLength="15" android:layout_alignParentTop="true" />
            <EditText android:id="@id/et_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="13.0dip" android:hint="@string/hint_email" android:singleLine="true" android:maxLength="32" android:layout_below="@id/et_username" android:inputType="textEmailAddress" />
            <EditText android:id="@id/et_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="13.0dip" android:hint="@string/hint_password" android:password="true" android:singleLine="true" android:maxLength="16" android:layout_below="@id/et_email" />
            <EditText android:id="@id/et_confirm_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="13.0dip" android:hint="@string/hint_confirm_password" android:password="true" android:singleLine="true" android:maxLength="16" android:layout_below="@id/et_password" />
            <TextView android:gravity="left" android:id="@id/btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginTop="5.0dip" android:text="@string/login_tip" android:layout_below="@id/et_confirm_password" android:layout_alignParentLeft="true" />
            <Button android:id="@id/btn_register" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="13.0dip" android:text="@string/register_label" android:layout_below="@id/et_confirm_password" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </ScrollView>
    <ImageView android:id="@id/shadow" android:background="@drawable/top_shadow" android:layout_width="fill_parent" android:layout_height="4.0dip" android:layout_below="@id/top_bar" />
</RelativeLayout>
