<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:background="@drawable/list_item_bg_selector" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:layout_alignParentTop="true" layout="@layout/top_bar" />
    <EditText android:id="@id/et_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="70.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:hint="@string/hint_input_username" android:singleLine="true" />
    <EditText android:id="@id/et_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:hint="@string/hint_input_password" android:password="true" android:singleLine="true" android:layout_below="@id/et_username" />
    <TextView android:gravity="left" android:id="@id/btn_register" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:text="@string/register_tip" android:layout_below="@id/et_password" android:layout_alignParentLeft="true" />
    <Button android:id="@id/btn_login" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="8.0dip" android:text="@string/login" android:layout_below="@id/et_password" android:layout_alignParentRight="true" />
    <ImageView android:id="@id/shadow" android:background="@drawable/top_shadow" android:layout_width="fill_parent" android:layout_height="4.0dip" android:layout_below="@id/top_bar" />
</RelativeLayout>
