<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/list_item_bg_selector" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:titleSpinner="http://schemas.android.com/apk/res/com.mappn.gfan">
    <include layout="@layout/top_bar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <RelativeLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:id="@id/tvContent" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/alipay_charge_content" />
            <EditText android:id="@id/et_input" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:singleLine="true" android:maxLength="3" android:numeric="integer" android:layout_below="@id/tvContent" android:layout_alignParentLeft="true" />
            <TextView android:textSize="16.0sp" android:id="@id/tv_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:text="@string/alipay_charge_info" android:layout_toRightOf="@id/et_input" android:layout_below="@id/tvContent" />
            <TextView android:id="@id/tv_charge_tip" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/charge_hint_alipay" android:layout_below="@id/et_input" />
            <CheckBox android:id="@id/cb_make_default_charge_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/checkbox_default_charge_type" android:layout_below="@id/tv_charge_tip" />
            <Button android:enabled="false" android:id="@id/btn_charge_alipay" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/ok" android:layout_below="@id/cb_make_default_charge_type" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
